Fix stats table content overflow

--- a/src/App.css
+++ b/src/App.css
@@ -409,8 +409,8 @@
 	height: 100%;
 }
 
-.dashboard-page:has(.dashboard-stats-table) {
-	overflow: auto;
+.dashboard-page-container:has(.dashboard-stats-table) {
+	overflow-y: scroll;
 }
 
 .dashboard-page-container:has(.clues-page) {
